--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: sign_flutter
 description: Sign basic state management for Flutter.
-version: 0.0.1+2
+version: 0.0.4
 homepage: https://github.com/Mehmetyaz/sign_flutter
 repository: https://github.com/Mehmetyaz/sign_flutter
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
+  sdk: '>=2.18.0 <4.0.0'
 
 dependencies:
-  sign: 0.0.2
+  sign: ^0.0.3
   flutter:
     sdk: flutter
 
